[tool.poetry]
name = "mte_consult"
version = "0.0.0"
description = "Mte_Consult"
authors = ["Daniel Thonon <d.thonon9@gmail.com>"]
license = "GPL-3.0"
readme = "README.md"
homepage = "https://github.com/dthonon/mte_consult"
repository = "https://github.com/dthonon/mte_consult"
documentation = "https://mte_consult.readthedocs.io"
classifiers = ["Development Status :: 2 - Pre-Alpha"]

[tool.poetry.urls]
Changelog = "https://github.com/dthonon/mte_consult/releases"

[tool.poetry.dependencies]
python = ">=3.10,<4"
click = ">=8.0"
pandas = ">=2.0"
pandas-stubs = ">=2.0"
textacy = ">=0.13"
scikit-learn = ">=1.2"
hunspell = ">=0.5"
requests = ">=2.31"
beautifulsoup4 = ">=4.12"
types-requests = ">=2.31"
types-beautifulsoup4 = ">=4.12"
lingua-language-detector = ">=2.0"
weasel = ">=0.3"
cupy-cuda12x = ">=12.3"
streamlit = ">=1.29"
spacy = ">=3.8"
spacy-streamlit = ">=1.0"
# fr-projet-de-pna-loup = { path = "models/projet_de_pna_loup/packages/fr_projet_de_pna_loup-0.0.1/dist/fr_projet_de_pna_loup-0.0.1.tar.gz" }
# fr-projet-arrete-tirs = { path = "models/projet_arrêté_tirs/packages/fr_projet_arrete_tirs-0.0.1/dist/fr_projet_arrete_tirs-0.0.1.tar.gz" }

[tool.poetry.dev-dependencies]
Pygments = ">=2.10"
black = ">=21.10b0"
coverage = { extras = ["toml"], version = ">=6.2" }
darglint = ">=1.8.1"
flake8 = ">=4.0.1"
flake8-bandit = ">=2.1.2"
flake8-bugbear = ">=21.9.2"
flake8-docstrings = ">=1.6.0"
flake8-rst-docstrings = ">=0.2.5"
furo = ">=2021.11.12"
isort = ">=5.10.1"
mypy = ">=0.930"
pep8-naming = ">=0.12.1"
pre-commit = ">=2.16.0"
pre-commit-hooks = ">=4.1.0"
pytest = ">=6.2.5"
pyupgrade = ">=2.29.1"
safety = ">=1.10.3"
sphinx = ">=4.3.2"
sphinx-autobuild = ">=2021.3.14"
sphinx-click = ">=3.0.2"
typeguard = ">=2.13.3"
xdoctest = { extras = ["colors"], version = ">=0.15.10" }
myst-parser = { version = ">=0.16.1" }

[tool.poetry.scripts]
mte-consult = "mte_consult.__main__:main"

[tool.coverage.paths]
source = ["src", "*/site-packages"]
tests = ["tests", "*/tests"]

[tool.coverage.run]
branch = true
source = ["mte_consult", "tests"]

[tool.coverage.report]
show_missing = true
fail_under = 10

[tool.isort]
profile = "black"
force_single_line = true
lines_after_imports = 2

[tool.mypy]
strict = true
warn_unreachable = true
pretty = true
show_column_numbers = true
show_error_codes = true
show_error_context = true

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
